einteilung nach besprechung

--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -9,7 +9,7 @@ This is where the abstract will go.
 
 \newpage
 
-% the table of contents abc
+% the table of content
 \minitoc
 
 \newpage
@@ -36,13 +36,17 @@ storage systems, to categorize them according to their different aspects and to
 compare their assets and drawbacks. The findings will also be compared to a
 popular distributed file storage system.
 
+% in chapter xyz we show abc ..
+
 \section{Background} This section gives a short basic overview over the most
 important topics concerning P2P systems, file storage, and the special
 requirements of P2P file storage systems compared to those of traditional and
 distributed file storage.
+% @Josua
 
 \section{Approach} This section describes the criteria we chose to classify the
 different file storage systems.
+% @Simon
 
 \subsection{Criteria}
 \begin{itemize}
@@ -67,14 +71,19 @@ summary of the findings and highlight those findings in a table comparing the
 file storage systems with each other.
 
 \subsection{Storj}
+% @Josua
 
 \subsection{Hive2Hive / PeerWasp}
+% @Simon
 
 \subsection{BitTorrent Sync}
+% @Simon
 
 \subsection{AeroFS}
+% @Josua
 
 \subsection{Dropbox}
+% @Andri
 
 \section{Summary and Conclusions} In this section, we provide a summary about
 the topics mentioned above and draw conclusions about the current state of the
